# akashic

./: .env.example  .gitignore  Cargo.toml  README.md
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20251128_075444_documents.rs
samples/: ideas.md
src/: app.rs  lib.rs
src/controllers/: ingest.rs  mod.rs
src/ingestion/: extractors.rs  mod.rs  pipeline.rs  stores.rs
src/models/: documents.rs  mod.rs
src/models/_entities/: documents.rs  mod.rs  prelude.rs
src/tasks/: ingest.rs
src/workers/: ingest.rs  mod.rs
tests/models/: documents.rs  mod.rs  users.rs
tests/requests/: auth.rs  ingest.rs  mod.rs  prepare_data.rs
