[workspace]

[package]
name = "akashic"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "akashic-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.13", features = ["tera"] }
unic-langid = { version = "0.9" }
# /view engine
axum-extra = { version = "0.10", features = ["form"] }
chromadb = "2.3.0"
neo4rs = "0.8.0"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
lopdf = "0.38.0"
pdf-extract = "0.10.0"
epub = "2.1.5"
markdown = "1.0.0"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
anyhow = "1.0.100"
tempfile = "3.23.0"
pyo3 = { version = "0.27.1", features = ["auto-initialize"], optional = true }

[features]
default = []
graphiti = ["pyo3"]

[[bin]]
name = "akashic-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
